--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ python:
   - "3.6"
 
 # command to install dependencies
-
+env:
+  -FLASK_VERSION=1.0.2
 
 install:
   - pip install -r requirements.txt
@@ -15,7 +16,7 @@ install:
 # command to run tests
 script:
   - pytest
-  
+  - pytest --cov app
 
 after_success:
   - coveralls
