--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ install:
 # command to run tests
 script:
   - pytest
-  - pytest --cov app
+  - pytest --cov=Sudoku.py
 
 after_success:
   - coveralls
